--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,23 +1,21 @@
-<h1> Add a new Restaurant </h1>
+<div class = 'container'>
+  <div class = 'row'>
+    <div class = 'col-xs-12 col-sm-10 col-sm-offset-1'>
 
-<%= form_for(@restaurant) do |t| %>
+      <h1> Add a new Restaurant </h1>
 
-  <%= t.label :name %>
-  <%= t.text_field :name %>
-  <br>
-  <%= t.label :address %>
-  <%= t.text_field :address %>
-  <br>
-  <%= t.label :phone_number %>
-  <%= t.text_field :phone_number %>
-  <br>
-  <%= t.label :category %>
-  <%= t.text_field :category %>
-  <br>
+      <%= simple_form_for(@restaurant) do |t| %>
 
-  <%= t.submit class: 'btn btn-success'%>
-  <% end %>
-<br>
-<br>
-
-<%= link_to "Back to list", restaurants_path %>
+        <%= t.input :name%>
+        <%= t.input :address %>
+        <%= t.input :phone_number %>
+        <%= t.input :category, collection: Restaurant::CATEGORIES %>
+        <br>
+        <%= t.submit class: 'btn btn-success'%>
+        <% end %>
+        <br>
+        <br>
+        <%= link_to "Back to list", restaurants_path, class: 'btn btn-primary'%>
+    </div>
+  </div>
+</div>
